# mouser-tauri

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: config-and-import.md  linux-support.md  runtime-architecture.md
docs/adr/: 0001-clean-room-backend-foundation.md
src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/mouser-core/: Cargo.toml
src-tauri/crates/mouser-core/src/: catalog.rs  defaults.rs  lib.rs  snapshots.rs  tests.rs  types.rs
src-tauri/crates/mouser-import/: Cargo.toml
src-tauri/crates/mouser-import/src/: lib.rs
src-tauri/crates/mouser-mock/: Cargo.toml
src-tauri/crates/mouser-mock/src/: lib.rs
src-tauri/crates/mouser-platform/: Cargo.toml
src-tauri/crates/mouser-platform/src/: gesture.rs  hidpp.rs  lib.rs  linux_backend.rs  macos_hook.rs  macos_iokit.rs  windows_appx_discovery.ps1  windows_backend.rs  windows_icon_extract.ps1  windows_running_apps.ps1
src-tauri/crates/mouser-platform/src/common/: hook_routes.rs  mod.rs  telemetry.rs
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  runtime.rs
src-tauri/src/runtime/: discovery.rs  error.rs  events.rs  platform.rs  routing.rs  service.rs
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx  select.tsx  separator.tsx  switch.tsx  textarea.tsx
src/hooks/: useRuntimeEvents.ts
src/lib/: api.ts  bindings.ts  sampleLegacyConfig.ts  types.ts
src/store/: uiStore.ts
src/test/: setup.ts
