[package]
name = "mouser-tauri"
version = "0.1.0"
description = "Clean-room Tauri rewrite of Mouser"
authors = ["Codex"]
edition = "2021"
license = "Apache-2.0"
default-run = "mouser-tauri"

[workspace]
members = [
    "crates/mouser-core",
    "crates/mouser-import",
    "crates/mouser-platform",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
mouser-core = { path = "crates/mouser-core" }
mouser-import = { path = "crates/mouser-import" }
mouser-platform = { path = "crates/mouser-platform" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"
tauri = { version = "2", features = ["tray-icon", "specta"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
thiserror = "2"

[lib]
name = "mouser_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mouser-core.workspace = true
mouser-import.workspace = true
mouser-platform.workspace = true
serde.workspace = true
serde_json.workspace = true
specta.workspace = true
specta-typescript.workspace = true
tauri.workspace = true
tauri-specta.workspace = true
thiserror.workspace = true
tauri-plugin-opener = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSImage", "NSResponder"] }
objc2-foundation = { version = "0.3.2", features = ["NSData"] }
