[package]
name = "mouser-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mouser-core.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
hidapi = { version = "2.6.5", features = ["macos-shared-device"] }
objc2-app-kit = { version = "0.3.2", features = ["NSRunningApplication", "NSWorkspace"] }
