[package]
name = "mouser-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mouser-core.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = { version = "0.25.0", features = ["highsierra"] }
hidapi = { version = "2.6.5", features = ["macos-shared-device"] }
objc2-app-kit = { version = "0.3.2", features = ["NSRunningApplication", "NSWorkspace", "NSEvent", "NSGraphicsContext", "objc2-core-graphics"] }
objc2-core-graphics = "0.3.2"
objc2-foundation = { version = "0.3.2", features = ["NSGeometry"] }

[target.'cfg(target_os = "windows")'.dependencies]
hidapi = { version = "2.6.5", default-features = false, features = ["windows-native"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
